[package]
name = "rosu-pp-older"
version = "0.2.0"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"

[dependencies]
rosu-pp = { version = "4.0.0" }
# rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "pp-update" }
# rosu-pp = { path = "../rosu-pp" }
rosu-map = { version = "0.2.1" }
